# compress-video

./: .gitmodules  compress-video.cabal  compress-videos.cabal  err  stack.yaml
app/: Main.hs
osx/: Main.hs
src/: Cmd.hs  Debug.hs  FFmpeg.hs  Lib.hs  MainLoop.hs
src/FFmpeg/: Config.hs  Probe.hs  Process.hs
src/FFmpeg/Data/: H264.hs
test/: Spec.hs  test.in
test/Test/: FFmpeg.hs
test/Test/FFmpeg/: H264.hs
test/tmp/: 测试.h264
