name:                compress-video
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/compress-video#readme
license:             MIT
license-file:        LICENSE
author:              Yu Li
maintainer:          ylilarry@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FFmpeg.Data.H264
                     , FFmpeg.Probe
                     , FFmpeg.Config
                     , FFmpeg.Process
                     , MainLoop
                     , Debug
  build-depends:       base >= 4.7 && < 5
                     , process
                     , directory
                     , aeson
                     , data-to-json-file
                     , regex-compat-tdfa
                     , split
                     , filepath
                     , unordered-containers
                     , vector
                     , bytestring
                     , system-power
                     , transformers
                     , extra
                     , ansi-terminal
                     , exceptions
  default-language:    Haskell2010

executable compress-video
  hs-source-dirs:      osx
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compress-video
                     , filepath
                     , data-to-json-file
  default-language:    Haskell2010

test-suite compress-video-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , compress-video
                     , hspec
                     , process
                     , data-to-json-file
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Test.FFmpeg
                     , Test.FFmpeg.H264

source-repository head
  type:     git
  location: https://github.com/YLiLarry/compress-video.git
